[metadata]
name = stogram_client
version = 0.1.0
description = Python client for stogram
author = Retoor
author_email = retoor@retoor.io
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    stogram = stogram_client.cli:main
