[metadata]
name = stogram_client
version = 0.2.0
description = Python client for stogram
author = Retoor
author_email = retoor@retoor.io
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir =
    = src
python_requires = >=3.7
[options.packages.find]
where = src

[options.package_data]
stogram_client = binaries/*

[options.entry_points]
console_scripts =
    stogram_db = stogram_client.db:cli
    stogram_debug = stogram_client.topic_reader:cli
    stogram_bench = stogram_client.bench:main
    #stogram = stogram_client.cli:main
    